2020-05-23  7.0.10-14 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-14, GIT revision 17...

2020-05-23  7.0.10-14 Cristy  <quetzlzacatenango@image...>
  * Errant warning when reading a profile file (reference
    https://github.com/ImageMagick/ImageMagick/issues/2030).

2020-05-17  7.0.10-13 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-13, GIT revision 17257:e3b442c:20200517.

2020-05-17  7.0.10-13 Cristy  <quetzlzacatenango@image...>
  * Remove errant debugging statement in SVG coder.

2020-05-15  7.0.10-12 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-12, GIT revision 17242:e14b3fb:20200515.

2020-05-12  7.0.10-12 Cristy  <quetzlzacatenango@image...>
  * Black artefacts during quantization (reference
    https://github.com/ImageMagick/ImageMagick/discussions/2007#discussioncomment-13546).

2020-05-08  7.0.10-11 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-11, GIT revision 17230:088df0e:20200508.

2020-04-28  7.0.10-11 Cristy  <quetzlzacatenango@image...>
  * Disable "random" OpenCL kernel.  Previously the work load was distributed
    but each started with the same random seed.
  * Finished implementation of -distort rigid-affine.
  * Enable threaded PNG coder.

2020-04-27  7.0.10-10 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-10, GIT revision 17205:9b0340e:20200427

2020-04-27  7.0.10-10 Cristy  <quetzlzacatenango@image...>
  * Correction to allocate a colormap of the maximum colors when color
    reducing an image sequence.
  * Write to stdout for mp4:-.

2020-04-25  7.0.10-9 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-9, GIT revision 17190:13fdcd1:20200426.

2020-04-25  7.0.10-9 Cristy  <quetzlzacatenango@image...>
  * Allocate a colormap of the maximum colors when color reducing an image
    sequence.
  * Label was not centered properly (reference