@@ -4,6 +4,7 @@
 2020-05-23  7.0.10-14 Cristy  <quetzlzacatenango@image...>
   * Errant warning when reading a profile file (reference
     https://github.com/ImageMagick/ImageMagick/issues/2030).
+   * Fix one off error on PDF object for images with ICC profile.
 
 2020-05-17  7.0.10-13 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.10-13, GIT revision 17257:e3b442c:20200517.
